--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link href="http://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div id="app">test</div>
+    <div id="app"></div>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 </html>
